hphp/hack/test/typecheck/defined/conditional_ok.php.exp
File "conditional_ok.php", line 5, characters 14-14:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "conditional_ok.php", line 5, characters 26-26:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
